Добавлен поиск по пользователям с фильтрами